# sat

./: .gitignore  Makefile.am  Makefile.in  README.md  TODO  VERSION  acinclude.m4  configure  configure.ac
analyse/: .gitignore  Makefile.am  Makefile.in  README
analyse/convert/: Makefile.am  Makefile.in  hybrid.cxx
analyse/disp/: Makefile.am  cfgdisp.cxx  cfgdisp.h  cyclotron.sin  disp.sin  firehose.sin  main.cxx  rdl.pro  solver.cxx  solver.h
analyse/disp1d/: Makefile.am  Makefile.in  cfgdisp.cxx  cfgdisp.h  rdl.pro  solver.h
analyse/disp3d/: Makefile.am  Makefile.in  bump.sin  cfgdisp.cxx  cfgdisp.h  conduct.cxx  cyclotron.sin  disp.sin  firehose.sin  main.cxx  mirror.sin  solver.cxx  solver.h
analyse/mercury/: Makefile.am  Makefile.in  main.cxx
analyse/shock/: .gitignore  Makefile.am  Makefile.in  common.c  common.h  exp_foot.c  exp_info.c  exp_lfy.c  exp_lstat.c  exp_npfx.c  exp_tanh.c  exp_top.c  exp_yft.c  export.h  fit.c  fit.h  main.c  parse.c  parse.h  shock  util.c  util.h
bench/: .gitignore  Makefile.am  Makefile.in  README
bench/base/: Makefile.am  Makefile.in  array.cxx
bench/tmpl/: Makefile.am  Makefile.in  TEMPLATE.am.tpl  TEMPLATE.cxx.tpl.in  TEMPLATE.mpi.tpl
connect/: Makefile.am  README
contrib/: Makefile.am  Makefile.in
contrib/emacs/: Makefile.am  Makefile.in  README  dot.emacs  emacs.el  sin-mode.el  style.el
contrib/etc/: Makefile.am  Makefile.in  bash_profile  bashrc  inputrc  login  satrc
contrib/gdb/: Makefile.am  Makefile.in  README  gdbinit  sat.py
contrib/logo/: ISSET.eps.bb  Makefile.am  Makefile.in  UofA.README
contrib/pbs/: Makefile.am  Makefile.in  breeze.mpi.pbs  brex.mpi.pbs  bugaboo.mpi.pbs  bugaboo.omp.pbs  bugaboo.pbs  cortex.pbs  dipolar8.pbs  glacier.pbs  grex.mpi.pbs  hungabee.mpi.pbs  lattice.mpi.pbs  matrix.mpi.pbs
docs/: MAINTAINERS  Makefile.am  Makefile.in  doxygen.cfg  genidldoc.pro  groups.dox
docs/html/: .gitignore  Makefile.am  Makefile.in
docs/license/: Makefile.am  Makefile.in  registration  sat
docs/logos/: Makefile.am  uofa_rndbw.eps.bb
docs/tech/: Makefile.am  Makefile.in  README  articles.bib  sat.bst  sat.cls  sat.eps  satbib.sty  satdoc.cls
etc/: Makefile.am  bash_profile  satrc
etc/pbs/: Makefile.am  cortex.pbs
example/: Makefile.am  Makefile.in  README
example/convert/: .gitignore  hybrid.cxx
example/dfnc/: .gitignore  Makefile.am  Makefile.in  dfnc.cxx  dfnc.sin
example/rand/: .gitignore  Makefile.am  Makefile.in  maxw.cxx  psd.cxx  sig.cxx
example/ref/: Makefile.am  Makefile.in  ref.cxx
example/tmpl/: Makefile.am  Makefile.in  TEMPLATE.am.tpl  TEMPLATE.cxx.tpl.in
example/transfrm/: Makefile.am  Makefile.in  reflect.cxx
example/zfnc/: .gitignore  Makefile.am  Makefile.in  analyseme.m  zfnc.cxx
idl/: .gitignore  Makefile.am  Makefile.in  README  start.pro.in
idl/cxd/: .directory  .idlcxd.pro.swp  align.pro  ann.pro  annarr.pro  annbox.pro  anncrc.pro  anncrv.pro  annedt.pro  annexe.pro  annget.pro  annhlp.pro  annply.pro  annput.pro  annres.pro  anntxt.pro  arcs.pro  averageb.pro  b_fac.pro  bar.pro  basecon.pro  best_fft.pro  bilin.pro  box1.pro  canopus0327.txt  canopus0327_2.txt  canopus_input_dkm.pro  canplot.eps  canplot.pro  canplot.ps  cbar.pro  chinit.pro  color.pro  crossi.pro  ctool.pro  cutoff.pro  datatype.pro  dist_scale.pro  drop_comments.pro  dt_tm_fromjs.pro  (+152 more)
idl/mpfit/: Makefile.am  Makefile.in  mpfit.pro  mpfitfun.pro
idl/pro/: Makefile.am  Makefile.in  adbic.pro  adbicr.pro  aic.pro  aic_g.pro  akh.pro  amax.pro  amax2.pro  amp.pro  anex.pro  anex2.pro  anex4.pro  ani.pro  aniy.pro  aniz.pro  anizb.pro  bic.pro  bicoh.pro  bicoh2d.pro  bicoh3.pro  bicoh3_2d.pro  bicoh3m.pro  bicoh_2d.pro  bicoherence.pro  bicoherence_2d.pro  bicoherence_red.pro  bicohm.pro  bicohnorm.pro  bilinint.pro  bye.pro  bymir.pro  bz.pro  bz_f.pro  chbeta.pro  cont3.pro  cont5.pro  coplot.pro  cor.pro  cor1.pro  (+295 more)
idl/sat/: Makefile.am  Makefile.in  README  dat_congrid.pro  dat_flyby.pro  dat_fpufix.pro  dat_grad_par.pro  dat_histogramize.pro  dat_par_per.pro  dat_regrid.pro  dat_scalevec.pro  hil_img1p2cut.pro  mth_cart2sphv.pro  mth_cross.pro  mth_curv.pro  mth_div.pro  mth_dot.pro  mth_grad.pro  mth_linearwgt.pro  mth_norm.pro  mth_rot.pro  mth_weight.pro  mth_weight_cell.pro  phy_ani.pro  phy_curv.pro  phy_exb.pro  phy_gradb.pro  phy_mgpause.pro  phy_temp_seq.pro  plt_2d.pro  plt_bullet.pro  plt_colorbar.pro  plt_img.pro  plt_img1.pro  plt_img1p2.pro  plt_img3.pro  plt_img3x3.pro  plt_legend.pro  plt_plot2d.pro  plt_vec.pro  (+15 more)
idl/stw/: Makefile.am  Makefile.in  figb.pro  pl_fig2d.pro  pl_fig3d.pro  pl_fig3d_pos_get.pro  pl_figani.pro  pl_figbv.pro  pl_figbv2.pro  pl_figdata.pro  pl_figdn2.pro  pl_figgyror.pro  pl_fign.pro  pl_figt2.pro  pl_figuv2.pro  pl_figv2d.pro  pl_flyby.pro  pl_gennul2.pro  pl_gennul3.pro  pl_xticks.pro  stw_arr_ext_grid.pro  stw_b.pro  stw_cart2cyl.pro  stw_cart2sph.pro  stw_contour_vect.pro  stw_cross_prd.pro  stw_curv_varr.pro  stw_data_set.pro  stw_div.pro  stw_div_old.pro  stw_e.pro  stw_exb_drift.pro  stw_grad.pro  stw_gyror.pro  stw_keyword_set.pro  stw_load_once_sca.pro  stw_load_once_vec.pro  stw_minval_set.pro  stw_n.pro  stw_ovector.pro  (+12 more)
idl/text2idl/: Makefile.am  Makefile.in  nexttok.pro  strtrans.pro  textable.pro  textoidl.pro  translate_sub_super.pro
idl/textoidl/: Makefile.am  README  VERSIONS  matchdelim.pro  showtex.pro  str_token.pro  strcnt.pro  (+1 more)
libs/: .gitignore  Makefile.am  Makefile.in  README  newdisable.h  newenable.h  sat.h  satbase.h  satcode.h  satconfig.h.in  satio.h  satmath.h  satpint.h  satsimul.h  satsysdef.h  sattest.h
matlab/: Makefile.am  Makefile.in  README  ani_anime.m  cam_rdsq.m  dat_despike.m  dat_filter.m  dat_regrid.m  dat_regridsq.m  img_fftsq.m  mth_cross.m  sat_fix_ylabels.m  sat_spectrogram.m  sat_subplot.m  sh5_assemble.m  sh5_assemblesq.m  sh5_rd1sq.m  sh5_rdpcles.m  sh5_rdsq.m  sh5_read.m  sio_fname.m
mk/: Makefile.am  Makefile.in
simul/: .gitignore  Makefile.am  Makefile.in  README
test/: Makefile.am  Makefile.in  README
tools/: Makefile.am  Makefile.in  README
(+1004 files in other folders)
