###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS =

if HAVE_GSL
SUBDIRS += shock
endif

dist_noinst_DATA = README
