###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS =

if HAVE_GSL
SUBDIRS += disp shock
endif

if HAVE_NOVA
SUBDIRS += mercury
endif

dist_noinst_DATA = README
