###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = html license tech

EXTRA_DIST = doxygen.cfg genidldoc.pro groups.dox MAINTAINERS

%:
	cd .. && make $@
