###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = pbs

files = satrc bash_profile

sysconf_DATA = $(files)
EXTRA_DIST = $(files)
