###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = dfnc rand ref zfnc transfrm tmpl

dist_noinst_DATA = README
