###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = mpfit pro sat stw textoidl todo zamb

idldir = $(prefix)/idl

dist_data_DATA = start.pro.in

nobase_idl_DATA = start.pro.in
