###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = mpfit pro sat stw text2idl todo zamb

files = README
instdir = $(prefix)/idl

dist_noinst_DATA = $(files) start.pro.in
nobase_inst_DATA = $(files) start.pro
