###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = todo

matlabdir = $(prefix)/matlab

# dist_data_DATA = start.pro.in

# nobase_matlab_DATA = start.pro.in
