###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = todo

files = README *.m
instdir = $(prefix)/matlab

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)
