###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = dipole herm hions inst khbox moon shock tmpl

dist_noinst_DATA = README
