###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

LDADD =

# include $(top_srcdir)/mk/amake/Makefile.sat
CFLAGS += $(NOVA_CFLAGS)
LDADD += $(NOVA_LIBS)

EXTRA_PROGRAMS = sat-mercury

sat_mercury_SOURCES = main.cxx
