###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

files = emacs.el sin-mode.el style.el
instdir = $(prefix)/contrib/emacs

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)
