###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = elisp

files = dot.emacs README
instdir = $(prefix)/contrib/emacs

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)
