###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

files = inputrc bash_profile satrc
instdir = $(prefix)/contrib/etc

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)
