###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

files = README gdbinit sat.py
instdir = $(prefix)/contrib/gdb

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)

CLEANFILES = *.pyc
