###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

logosfiles = *.png *.jpg *.svg *.eps*

dist_data_DATA = $(logosfiles) README.uofa

logosdocsdir = $(prefix)/contrib/logo

nobase_logosdocs_DATA = $(logosfiles)
