###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

files = *.png *.jpg *.svg *.eps* *.README
instdir = $(prefix)/contrib/logo

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)

