###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

files = cortex.pbs glacier.pbs

sysconfpbsdir = $(sysconfdir)/pbs
sysconfpbs_DATA = $(files)

EXTRA_DIST = $(files)
