###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

files = *.pbs
instdir = $(prefix)/contrib/pbs

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)
