###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = figs

htmlfiles = *.html *.gif *.map *.md5 *.png *.php *.css

# nodist_data_DATA = $(htmlfiles)

dist_noinst_DATA = dummy.html dummy.gif dummy.map dummy.md5 dummy.png dummy.php dummy.css

htmldocsdir = $(prefix)/docs/html

nobase_htmldocs_DATA = $(htmlfiles)
