###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

SUBDIRS = figs

files = *.html *.gif *.map *.md5 *.png *.php *.css
instdir = $(prefix)/docs/html

# dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)

dummy = dummy.html dummy.gif dummy.map dummy.md5 dummy.png dummy.php dummy.css

dist_noinst_DATA = $(dummy)
# nobase_inst_DATA = $(dummy)
