###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

lics = libconfig sat

EXTRA_DIST = $(lics)

licdocsdir = $(prefix)/docs/license

nobase_licdocs_DATA = $(lics)
