###############################################################################
##   Copyright (C) by Jan Paral and SAT team                                  #
##   See docs/license/sat file for copying and redistribution conditions.     #
###############################################################################

files = libconfig register sat
instdir = $(prefix)/docs/license

dist_noinst_DATA = $(files)
nobase_inst_DATA = $(files)
